@@ -1,3 +1,9 @@
+2009-11-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V01-02-04
+	* data: add PrescaleService.prescales(pathName) interface,
+	requested by Derek
+
 2009-10-29  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V01-02-03
